--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "turbo test",
     "type-check": "turbo type-check",
     "clean": "turbo clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "ci": "turbo build test"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
