use lib in web and improve exposure of files

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,10 +4,8 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "exports": {
-    "./styles.css": "./dist/index.css",
-    "./card": "./src/card.tsx",
-    "./button": "./src/button.tsx"
+  "publishConfig": {
+    "directory": "src"
   },
   "license": "MIT",
   "scripts": {
