--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@repo/lib",
   "version": "0.0.0",
-  "exports": {
-    "./add": "./src/add.ts"
+  "publishConfig": {
+    "directory": "src"
   },
   "license": "MIT",
   "scripts": {
