remove unnecessary files + fix tailwind issue in ui package

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,8 +4,9 @@
   "sideEffects": [
     "**/*.css"
   ],
-  "publishConfig": {
-    "directory": "src"
+  "exports": {
+    "./button": "./src/button.tsx",
+    "./styles.css": "./dist/index.css"
   },
   "license": "MIT",
   "scripts": {
