--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint src/",
     "type-check": "tsc --noEmit",
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "test:watch": "vitest --watch"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
