--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "type-check": "turbo type-check",
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "ci": "turbo lint type-check test build"
+    "ci:test": "turbo lint type-check test",
+    "ci:release": "echo \"No release script specified\""
   },
   "devDependencies": {
     "eslint": "^8.56.0",
