--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  build:
+  test:
     name: "Test"
     timeout-minutes: 15
     runs-on: ubuntu-latest
@@ -38,3 +38,15 @@ jobs:
 
       - name: CI
         run: pnpm run ci:test
+
+  deploy:
+    name: "Deploy"
+    needs: build # This job depends on the 'build' job
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only run this job for pushes to the main branch
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Deploy to production
+        run: echo "Deploying to production..."
+        # Add your deployment steps here
