--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
 
   deploy:
     name: "Deploy"
-    needs: build # This job depends on the 'build' job
+    needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only run this job for pushes to the main branch
     steps:
@@ -49,4 +49,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Deploy to production
         run: echo "Deploying to production..."
-        # Add your deployment steps here
+        # Add your deployment steps here.github
