--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,6 @@ jobs:
     name: "Test"
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    # To use Remote Caching, uncomment the next lines and follow the steps below.
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
@@ -36,17 +35,16 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: CI
-        run: pnpm run ci:test
+      - name: Test
+        run: pnpx turbo lint type-check test
 
   deploy:
     name: "Deploy"
     needs: test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only run this job for pushes to the main branch
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Only run this job for pushes to main
     steps:
       - name: Check out code
         uses: actions/checkout@v3
       - name: Deploy to production
         run: echo "Deploying to production..."
-        # Add your deployment steps here.github
